fix:因使用宏修改了lib的生成位置、名称，故Duilib.h找不到lib文件

--- a/DuiLib/DuiLib2022.vcxproj
+++ b/DuiLib/DuiLib2022.vcxproj
@@ -1295,6 +1295,7 @@
     <ClInclude Include="Core\UIXmlAttribute.h" />
     <ClInclude Include="Core\UIXmlDocument.h" />
     <ClInclude Include="Core\UIXmlNode.h" />
+    <ClInclude Include="DuiLib.h" />
     <ClInclude Include="Layout\UIAnimationTabLayout.h" />
     <ClInclude Include="Layout\UIChildLayout.h" />
     <ClInclude Include="Layout\UIChildWindow.h" />
@@ -1319,6 +1320,7 @@
     <ClInclude Include="Utils\observer_impl_base.h" />
     <ClInclude Include="Utils\TrayIcon.h" />
     <ClInclude Include="Utils\UIApplication.h" />
+    <ClInclude Include="Utils\UIDataExchange.hpp" />
     <ClInclude Include="Utils\UIDelegate.h" />
     <ClInclude Include="Utils\UIDialog.h" />
     <ClInclude Include="Utils\UIForm.h" />
